# SlitScanGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_3rdparty.bat
SlitScanGenerator/: SlitScanGenerator.pro  SlitScanGenerator_withinstall.pro  aboutbox.cpp  aboutbox.h  aboutbox.ui  cimg_tools.cpp  cimg_tools.h  ffmpeg_tools.cpp  ffmpeg_tools.h  geo_tools.cpp  geo_tools.h  imageviewer.cpp  imageviewer.h  importdialog.cpp  importdialog.h  importdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  processingparametertable.cpp  processingparametertable.h  processingtask.cpp  processingtask.h  processingthread.cpp  processingwidget.cpp  processingwidget.h  slitscangenerator.qrc  taskswidget.cpp  taskswidget.h
SlitScanGenerator/testmovie/: test_lily_DSC_6003.ini  test_mexicancat_DSC_6001.ini  test_mexicancat_DSC_6001_testconfig.ini
cmake/: FindCImg.cmake  FindFFmpeg.cmake  jk_deployqt.cmake
doc/pic/: cuts_XZ.cdr  cuts_XZ_pitch.cdr  cuts_XZ_rot.cdr  cuts_YZ.cdr
doc/screenshots/: slit_width.cdr  stillimages_beforeafter.cdr
installer_win/: CMakeLists.txt  installer-welcome.cpt  installer.cmake.nsi  uninstaller-welcome.cpt
resources/: appversion.rc.cmake  resources.qrc
resources/stylesheets/: darkorange.qss
source/: CMakeLists.txt  aboutbox.cpp  aboutbox.ui  cimg_tools.cpp  cimg_tools.h  configio.cpp  configio.h  configio_dummy.cpp  configio_dummy.h  configio_ini.cpp  configio_ini.h  cpp_tools.cpp  cpp_tools.h  defines.h.cmake  ffmpeg_tools.cpp  ffmpeg_tools.h  geo_tools.h  imageviewer.cpp  imageviewer.h  imagewriter.cpp  imagewriter.h  imagewriter_cimg.cpp  imagewriter_cimg.h  imagewriter_jpeg.cpp  imagewriter_jpeg.h  imagewriter_png.cpp  imagewriter_png.h  imagewriterfactory.cpp  imagewriterfactory.h  importdialog.cpp  importdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  processingparametertable.cpp  processingparametertable.h  (+25 more)
testimages/: test1.cdr  test3.cdr
testmovie/: test_flower_DSC_8643_testconfig.ini  test_mexicancat_DSC_6001.ini  test_mexicancat_DSC_6001_testconfig.ini
translations/: CMakeLists.txt  SlitScanGenerator_de.ts  SlitScanGenerator_en.ts
