# This will ensure that the *.qm files will be stored
# in the right place within the build directory.
file(GLOB SLITSCANGENERATOR_TRANSLATIONS *.ts)
list(APPEND SLITSCANGENERATOR_TRANSLATIONS SlitScanGenerator_de.ts SlitScanGenerator_en.ts)
file(GLOB_RECURSE SLITSCANGENERATOR_BASE_SOURCES ${PROJECT_SOURCE_DIR}/source/*.cpp)
file(GLOB_RECURSE SLITSCANGENERATOR_BASE_HEADERS ${PROJECT_SOURCE_DIR}/source/*.h)
file(GLOB_RECURSE SLITSCANGENERATOR_BASE_FORMS ${PROJECT_SOURCE_DIR}/source/*.ui)


if(UPDATE_TRANSLATIONS)
    message(STATUS "*** Update translations - lupdate ON")
    if(TRANS_KEEP_OBSOLETE)
        message(STATUS "*** getting rid of old text entries: \"lupdate -noobsolete\" ON")
        QT_CREATE_TRANSLATION(SLITSCANGENERATOR_QMFILES ${SLITSCANGENERATOR_BASE_SOURCES} ${SLITSCANGENERATOR_BASE_HEADERS}
        ${SLITSCANGENERATOR_BASE_FORMS} ${SLITSCANGENERATOR_TRANSLATIONS} OPTIONS -Inobsolete)
    else()
        QT_CREATE_TRANSLATION(SLITSCANGENERATOR_QMFILES ${SLITSCANGENERATOR_BASE_SOURCES} ${SLITSCANGENERATOR_BASE_HEADERS}
        ${SLITSCANGENERATOR_BASE_FORMS} ${SLITSCANGENERATOR_TRANSLATIONS})
    endif(TRANS_KEEP_OBSOLETE)
else()
    message(STATUS "*** Update translations - lupdate OFF")
    QT_ADD_TRANSLATION(SLITSCANGENERATOR_QMFILES ${SLITSCANGENERATOR_TRANSLATIONS})
endif(UPDATE_TRANSLATIONS)


add_custom_target(SLITSCANGENERATOR_UPDATE_RANSLATIONS DEPENDS ${SLITSCANGENERATOR_QMFILES})

# install translations
install(FILES ${SLITSCANGENERATOR_QMFILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/translations")

set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM true)
